# vipy

./: .gitignore  README.md  pyproject.toml
vipy/: __init__.py
vipy/bus/: __init__.py
vipy/bus/base/: serial.py  word.py
vipy/bus/spi/: __init__.py  spi_base.py  spi_driver.py  spi_monitor.py
vipy/drivers/: __init__.py  aggregated_signal.py  clock.py  reset.py  simple_signal.py  vector_signal.py
vipy/regbank/reader/: CSVReader.py  __init__.py  csv_reader.py
vipy/regbank/structure/: __init__.py  access.py  field.py  regbank.py  register.py
vipy/structure/: __init__.py  checker.py  component.py  driver.py  globalenv.py  monitor.py
vipy/utils/: __init__.py
vipy/utils/meta/: singleton.py
vipy/utils/queue/: dataport.py  queue.py
vipy/utils/workarounds/: __init__.py  verilator_vectors.py
vipyhdl/bus/base/: __init__.py
vipyhdl/bus/spi/: __init__.py  spi_base.py  spi_driver.py  spi_monitor.py
vipyhdl/drivers/: aggregated_signal.py  clock.py  reset.py  simple_signal.py  vector_signal.py
vipyhdl/regbank/reader/: __init__.py  csv_reader.py
vipyhdl/regbank/structure/: __init__.py  access.py  field.py  regbank.py  register.py  shadow_register_group.py
vipyhdl/structure/: checker.py  component.py  driver.py  globalenv.py  monitor.py
vipyhdl/utils/queue/: __init__.py  queue.py
vipyhdl/utils/workarounds/: __init__.py
