[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vipyhdlhdl"
version = "0.1.0"
authors = [
  { name="Julien FAUCHER", email="suzizecat@free.fr" },
]
description = "Utilities for writting VIP for cocotb testbenchs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
"Homepage" = "https://github.com/suzizecat/vipyhdl"
"Bug Tracker" = "https://github.com/suzizecat/vipyhdl/issues"